parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> ka
Rule 1     ka -> expression SEMICOLON ka
Rule 2     ka -> assign SEMICOLON ka
Rule 3     ka -> print SEMICOLON ka
Rule 4     ka -> input SEMICOLON ka
Rule 5     ka -> return SEMICOLON legal
Rule 6     ka -> if_statement ka
Rule 7     ka -> if_else_statement ka
Rule 8     ka -> while_statement ka
Rule 9     ka -> for_statement ka
Rule 10    ka -> function_statement ka
Rule 11    ka -> comment ka
Rule 12    ka -> empty
Rule 13    legal -> expression SEMICOLON legal
Rule 14    legal -> assign SEMICOLON legal
Rule 15    legal -> print SEMICOLON legal
Rule 16    legal -> input SEMICOLON legal
Rule 17    legal -> return SEMICOLON legal
Rule 18    legal -> if_statement legal
Rule 19    legal -> if_else_statement legal
Rule 20    legal -> while_statement legal
Rule 21    legal -> for_statement legal
Rule 22    legal -> comment legal
Rule 23    legal -> empty
Rule 24    comment -> COMMENT
Rule 25    assign -> INTTYPE IDENTIFIER EQUAL INT
Rule 26    assign -> INTTYPE IDENTIFIER EQUAL expression
Rule 27    assign -> FLOATTYPE IDENTIFIER EQUAL expression
Rule 28    assign -> CHARTYPE IDENTIFIER EQUAL CHAR
Rule 29    assign -> FLOATTYPE IDENTIFIER EQUAL FLOAT
Rule 30    assign -> STRINGTYPE IDENTIFIER EQUAL STRING
Rule 31    assign -> INTTYPE IDENTIFIER
Rule 32    assign -> FLOATTYPE IDENTIFIER
Rule 33    assign -> CHARTYPE IDENTIFIER
Rule 34    assign -> STRINGTYPE IDENTIFIER
Rule 35    assign -> IDENTIFIER EQUAL expression
Rule 36    print -> PRINT LPAREN expression RPAREN
Rule 37    print -> PRINT LPAREN STRING RPAREN
Rule 38    input -> IDENTIFIER EQUAL INPUT LPAREN RPAREN
Rule 39    return -> RETURN expression
Rule 40    return -> RETURN INT
Rule 41    return -> RETURN IDENTIFIER
Rule 42    expression -> expression ADD expression
Rule 43    expression -> expression SUBTRACT expression
Rule 44    expression -> expression MULTIPLY expression
Rule 45    expression -> expression DIVIDE expression
Rule 46    expression -> expression EXP expression
Rule 47    expression -> LPAREN expression RPAREN
Rule 48    expression -> expression EQUALCOMP expression
Rule 49    expression -> expression GREATER_THAN_EQUAL expression
Rule 50    expression -> expression LESS_THAN_EQUAL expression
Rule 51    expression -> expression GREATER_THAN expression
Rule 52    expression -> expression LESS_THAN expression
Rule 53    expression -> expression NOTEQUAL expression
Rule 54    expression -> NOT expression
Rule 55    expression -> expression AND expression
Rule 56    expression -> expression OR expression
Rule 57    expression -> INT
Rule 58    expression -> FLOAT
Rule 59    expression -> CONTINUE
Rule 60    expression -> BREAK
Rule 61    if_statement -> IF LPAREN expression RPAREN LBRACE legal RBRACE
Rule 62    if_else_statement -> IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE LBRACE legal RBRACE
Rule 63    if_else_statement -> IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_else_statement
Rule 64    if_else_statement -> IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_statement
Rule 65    while_statement -> WHILE LPAREN expression RPAREN LBRACE legal RBRACE
Rule 66    for_statement -> FOR LPAREN assign SEMICOLON expression SEMICOLON assign RPAREN LBRACE legal RBRACE
Rule 67    type_identifier -> INTTYPE IDENTIFIER
Rule 68    type_identifier -> CHARTYPE IDENTIFIER
Rule 69    type_identifier -> FLOATTYPE IDENTIFIER
Rule 70    type_identifier -> STRINGTYPE IDENTIFIER
Rule 71    function_statement -> type_identifier LPAREN function_input RPAREN LBRACE legal RBRACE
Rule 72    function_statement -> VOID IDENTIFIER LPAREN function_input RPAREN LBRACE legal RBRACE
Rule 73    function_input -> type_identifier COMMA function_input
Rule 74    function_input -> type_identifier
Rule 75    function_input -> empty
Rule 76    expression -> IDENTIFIER LPAREN function_call_input RPAREN
Rule 77    function_call_input -> IDENTIFIER COMMA IDENTIFIER
Rule 78    function_call_input -> IDENTIFIER COMMA expression
Rule 79    function_call_input -> expression COMMA IDENTIFIER
Rule 80    function_call_input -> expression COMMA expression
Rule 81    function_call_input -> IDENTIFIER
Rule 82    function_call_input -> expression
Rule 83    function_call_input -> empty
Rule 84    expression -> IDENTIFIER
Rule 85    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 42
AND                  : 55
BREAK                : 60
CHAR                 : 28
CHARTYPE             : 28 33 68
COMMA                : 73 77 78 79 80
COMMENT              : 24
CONTINUE             : 59
DIVIDE               : 45
ELSE                 : 62 63 64
EQUAL                : 25 26 27 28 29 30 35 38
EQUALCOMP            : 48
EXP                  : 46
FLOAT                : 29 58
FLOATTYPE            : 27 29 32 69
FOR                  : 66
GREATER_THAN         : 51
GREATER_THAN_EQUAL   : 49
IDENTIFIER           : 25 26 27 28 29 30 31 32 33 34 35 38 41 67 68 69 70 72 76 77 77 78 79 81 84
IF                   : 61 62 63 64
INPUT                : 38
INT                  : 25 40 57
INTTYPE              : 25 26 31 67
LBRACE               : 61 62 62 63 64 65 66 71 72
LESS_THAN            : 52
LESS_THAN_EQUAL      : 50
LPAREN               : 36 37 38 47 61 62 63 64 65 66 71 72 76
MULTIPLY             : 44
NOT                  : 54
NOTEQUAL             : 53
OR                   : 56
PRINT                : 36 37
RBRACE               : 61 62 62 63 64 65 66 71 72
RETURN               : 39 40 41
RPAREN               : 36 37 38 47 61 62 63 64 65 66 71 72 76
SEMICOLON            : 1 2 3 4 5 13 14 15 16 17 66 66
STRING               : 30 37
STRINGTYPE           : 30 34 70
SUBTRACT             : 43
VOID                 : 72
WHILE                : 65
error                : 

Nonterminals, with rules where they appear

assign               : 2 14 66 66
comment              : 11 22
empty                : 12 23 75 83
expression           : 1 13 26 27 35 36 39 42 42 43 43 44 44 45 45 46 46 47 48 48 49 49 50 50 51 51 52 52 53 53 54 55 55 56 56 61 62 63 64 65 66 78 79 80 80 82
for_statement        : 9 21
function_call_input  : 76
function_input       : 71 72 73
function_statement   : 10
if_else_statement    : 7 19 63
if_statement         : 6 18 64
input                : 4 16
ka                   : 1 2 3 4 6 7 8 9 10 11 0
legal                : 5 13 14 15 16 17 18 19 20 21 22 61 62 62 63 64 65 66 71 72
print                : 3 15
return               : 5 17
type_identifier      : 71 73 74
while_statement      : 8 20

Parsing method: LALR

state 0

    (0) S' -> . ka
    (1) ka -> . expression SEMICOLON ka
    (2) ka -> . assign SEMICOLON ka
    (3) ka -> . print SEMICOLON ka
    (4) ka -> . input SEMICOLON ka
    (5) ka -> . return SEMICOLON legal
    (6) ka -> . if_statement ka
    (7) ka -> . if_else_statement ka
    (8) ka -> . while_statement ka
    (9) ka -> . for_statement ka
    (10) ka -> . function_statement ka
    (11) ka -> . comment ka
    (12) ka -> . empty
    (42) expression -> . expression ADD expression
    (43) expression -> . expression SUBTRACT expression
    (44) expression -> . expression MULTIPLY expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . expression EXP expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . expression EQUALCOMP expression
    (49) expression -> . expression GREATER_THAN_EQUAL expression
    (50) expression -> . expression LESS_THAN_EQUAL expression
    (51) expression -> . expression GREATER_THAN expression
    (52) expression -> . expression LESS_THAN expression
    (53) expression -> . expression NOTEQUAL expression
    (54) expression -> . NOT expression
    (55) expression -> . expression AND expression
    (56) expression -> . expression OR expression
    (57) expression -> . INT
    (58) expression -> . FLOAT
    (59) expression -> . CONTINUE
    (60) expression -> . BREAK
    (76) expression -> . IDENTIFIER LPAREN function_call_input RPAREN
    (84) expression -> . IDENTIFIER
    (25) assign -> . INTTYPE IDENTIFIER EQUAL INT
    (26) assign -> . INTTYPE IDENTIFIER EQUAL expression
    (27) assign -> . FLOATTYPE IDENTIFIER EQUAL expression
    (28) assign -> . CHARTYPE IDENTIFIER EQUAL CHAR
    (29) assign -> . FLOATTYPE IDENTIFIER EQUAL FLOAT
    (30) assign -> . STRINGTYPE IDENTIFIER EQUAL STRING
    (31) assign -> . INTTYPE IDENTIFIER
    (32) assign -> . FLOATTYPE IDENTIFIER
    (33) assign -> . CHARTYPE IDENTIFIER
    (34) assign -> . STRINGTYPE IDENTIFIER
    (35) assign -> . IDENTIFIER EQUAL expression
    (36) print -> . PRINT LPAREN expression RPAREN
    (37) print -> . PRINT LPAREN STRING RPAREN
    (38) input -> . IDENTIFIER EQUAL INPUT LPAREN RPAREN
    (39) return -> . RETURN expression
    (40) return -> . RETURN INT
    (41) return -> . RETURN IDENTIFIER
    (61) if_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE
    (62) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE LBRACE legal RBRACE
    (63) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_else_statement
    (64) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_statement
    (65) while_statement -> . WHILE LPAREN expression RPAREN LBRACE legal RBRACE
    (66) for_statement -> . FOR LPAREN assign SEMICOLON expression SEMICOLON assign RPAREN LBRACE legal RBRACE
    (71) function_statement -> . type_identifier LPAREN function_input RPAREN LBRACE legal RBRACE
    (72) function_statement -> . VOID IDENTIFIER LPAREN function_input RPAREN LBRACE legal RBRACE
    (24) comment -> . COMMENT
    (85) empty -> .
    (67) type_identifier -> . INTTYPE IDENTIFIER
    (68) type_identifier -> . CHARTYPE IDENTIFIER
    (69) type_identifier -> . FLOATTYPE IDENTIFIER
    (70) type_identifier -> . STRINGTYPE IDENTIFIER

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    IDENTIFIER      shift and go to state 20
    INTTYPE         shift and go to state 21
    FLOATTYPE       shift and go to state 22
    CHARTYPE        shift and go to state 23
    STRINGTYPE      shift and go to state 24
    PRINT           shift and go to state 25
    RETURN          shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    VOID            shift and go to state 31
    COMMENT         shift and go to state 32
    $end            reduce using rule 85 (empty -> .)

    ka                             shift and go to state 1
    expression                     shift and go to state 2
    assign                         shift and go to state 3
    print                          shift and go to state 4
    input                          shift and go to state 5
    return                         shift and go to state 6
    if_statement                   shift and go to state 7
    if_else_statement              shift and go to state 8
    while_statement                shift and go to state 9
    for_statement                  shift and go to state 10
    function_statement             shift and go to state 11
    comment                        shift and go to state 12
    empty                          shift and go to state 13
    type_identifier                shift and go to state 30

state 1

    (0) S' -> ka .



state 2

    (1) ka -> expression . SEMICOLON ka
    (42) expression -> expression . ADD expression
    (43) expression -> expression . SUBTRACT expression
    (44) expression -> expression . MULTIPLY expression
    (45) expression -> expression . DIVIDE expression
    (46) expression -> expression . EXP expression
    (48) expression -> expression . EQUALCOMP expression
    (49) expression -> expression . GREATER_THAN_EQUAL expression
    (50) expression -> expression . LESS_THAN_EQUAL expression
    (51) expression -> expression . GREATER_THAN expression
    (52) expression -> expression . LESS_THAN expression
    (53) expression -> expression . NOTEQUAL expression
    (55) expression -> expression . AND expression
    (56) expression -> expression . OR expression

    SEMICOLON       shift and go to state 33
    ADD             shift and go to state 34
    SUBTRACT        shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    EXP             shift and go to state 38
    EQUALCOMP       shift and go to state 39
    GREATER_THAN_EQUAL shift and go to state 40
    LESS_THAN_EQUAL shift and go to state 41
    GREATER_THAN    shift and go to state 42
    LESS_THAN       shift and go to state 43
    NOTEQUAL        shift and go to state 44
    AND             shift and go to state 45
    OR              shift and go to state 46


state 3

    (2) ka -> assign . SEMICOLON ka

    SEMICOLON       shift and go to state 47


state 4

    (3) ka -> print . SEMICOLON ka

    SEMICOLON       shift and go to state 48


state 5

    (4) ka -> input . SEMICOLON ka

    SEMICOLON       shift and go to state 49


state 6

    (5) ka -> return . SEMICOLON legal

    SEMICOLON       shift and go to state 50


state 7

    (6) ka -> if_statement . ka
    (1) ka -> . expression SEMICOLON ka
    (2) ka -> . assign SEMICOLON ka
    (3) ka -> . print SEMICOLON ka
    (4) ka -> . input SEMICOLON ka
    (5) ka -> . return SEMICOLON legal
    (6) ka -> . if_statement ka
    (7) ka -> . if_else_statement ka
    (8) ka -> . while_statement ka
    (9) ka -> . for_statement ka
    (10) ka -> . function_statement ka
    (11) ka -> . comment ka
    (12) ka -> . empty
    (42) expression -> . expression ADD expression
    (43) expression -> . expression SUBTRACT expression
    (44) expression -> . expression MULTIPLY expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . expression EXP expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . expression EQUALCOMP expression
    (49) expression -> . expression GREATER_THAN_EQUAL expression
    (50) expression -> . expression LESS_THAN_EQUAL expression
    (51) expression -> . expression GREATER_THAN expression
    (52) expression -> . expression LESS_THAN expression
    (53) expression -> . expression NOTEQUAL expression
    (54) expression -> . NOT expression
    (55) expression -> . expression AND expression
    (56) expression -> . expression OR expression
    (57) expression -> . INT
    (58) expression -> . FLOAT
    (59) expression -> . CONTINUE
    (60) expression -> . BREAK
    (76) expression -> . IDENTIFIER LPAREN function_call_input RPAREN
    (84) expression -> . IDENTIFIER
    (25) assign -> . INTTYPE IDENTIFIER EQUAL INT
    (26) assign -> . INTTYPE IDENTIFIER EQUAL expression
    (27) assign -> . FLOATTYPE IDENTIFIER EQUAL expression
    (28) assign -> . CHARTYPE IDENTIFIER EQUAL CHAR
    (29) assign -> . FLOATTYPE IDENTIFIER EQUAL FLOAT
    (30) assign -> . STRINGTYPE IDENTIFIER EQUAL STRING
    (31) assign -> . INTTYPE IDENTIFIER
    (32) assign -> . FLOATTYPE IDENTIFIER
    (33) assign -> . CHARTYPE IDENTIFIER
    (34) assign -> . STRINGTYPE IDENTIFIER
    (35) assign -> . IDENTIFIER EQUAL expression
    (36) print -> . PRINT LPAREN expression RPAREN
    (37) print -> . PRINT LPAREN STRING RPAREN
    (38) input -> . IDENTIFIER EQUAL INPUT LPAREN RPAREN
    (39) return -> . RETURN expression
    (40) return -> . RETURN INT
    (41) return -> . RETURN IDENTIFIER
    (61) if_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE
    (62) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE LBRACE legal RBRACE
    (63) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_else_statement
    (64) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_statement
    (65) while_statement -> . WHILE LPAREN expression RPAREN LBRACE legal RBRACE
    (66) for_statement -> . FOR LPAREN assign SEMICOLON expression SEMICOLON assign RPAREN LBRACE legal RBRACE
    (71) function_statement -> . type_identifier LPAREN function_input RPAREN LBRACE legal RBRACE
    (72) function_statement -> . VOID IDENTIFIER LPAREN function_input RPAREN LBRACE legal RBRACE
    (24) comment -> . COMMENT
    (85) empty -> .
    (67) type_identifier -> . INTTYPE IDENTIFIER
    (68) type_identifier -> . CHARTYPE IDENTIFIER
    (69) type_identifier -> . FLOATTYPE IDENTIFIER
    (70) type_identifier -> . STRINGTYPE IDENTIFIER

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    IDENTIFIER      shift and go to state 20
    INTTYPE         shift and go to state 21
    FLOATTYPE       shift and go to state 22
    CHARTYPE        shift and go to state 23
    STRINGTYPE      shift and go to state 24
    PRINT           shift and go to state 25
    RETURN          shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    VOID            shift and go to state 31
    COMMENT         shift and go to state 32
    $end            reduce using rule 85 (empty -> .)

    if_statement                   shift and go to state 7
    ka                             shift and go to state 51
    expression                     shift and go to state 2
    assign                         shift and go to state 3
    print                          shift and go to state 4
    input                          shift and go to state 5
    return                         shift and go to state 6
    if_else_statement              shift and go to state 8
    while_statement                shift and go to state 9
    for_statement                  shift and go to state 10
    function_statement             shift and go to state 11
    comment                        shift and go to state 12
    empty                          shift and go to state 13
    type_identifier                shift and go to state 30

state 8

    (7) ka -> if_else_statement . ka
    (1) ka -> . expression SEMICOLON ka
    (2) ka -> . assign SEMICOLON ka
    (3) ka -> . print SEMICOLON ka
    (4) ka -> . input SEMICOLON ka
    (5) ka -> . return SEMICOLON legal
    (6) ka -> . if_statement ka
    (7) ka -> . if_else_statement ka
    (8) ka -> . while_statement ka
    (9) ka -> . for_statement ka
    (10) ka -> . function_statement ka
    (11) ka -> . comment ka
    (12) ka -> . empty
    (42) expression -> . expression ADD expression
    (43) expression -> . expression SUBTRACT expression
    (44) expression -> . expression MULTIPLY expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . expression EXP expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . expression EQUALCOMP expression
    (49) expression -> . expression GREATER_THAN_EQUAL expression
    (50) expression -> . expression LESS_THAN_EQUAL expression
    (51) expression -> . expression GREATER_THAN expression
    (52) expression -> . expression LESS_THAN expression
    (53) expression -> . expression NOTEQUAL expression
    (54) expression -> . NOT expression
    (55) expression -> . expression AND expression
    (56) expression -> . expression OR expression
    (57) expression -> . INT
    (58) expression -> . FLOAT
    (59) expression -> . CONTINUE
    (60) expression -> . BREAK
    (76) expression -> . IDENTIFIER LPAREN function_call_input RPAREN
    (84) expression -> . IDENTIFIER
    (25) assign -> . INTTYPE IDENTIFIER EQUAL INT
    (26) assign -> . INTTYPE IDENTIFIER EQUAL expression
    (27) assign -> . FLOATTYPE IDENTIFIER EQUAL expression
    (28) assign -> . CHARTYPE IDENTIFIER EQUAL CHAR
    (29) assign -> . FLOATTYPE IDENTIFIER EQUAL FLOAT
    (30) assign -> . STRINGTYPE IDENTIFIER EQUAL STRING
    (31) assign -> . INTTYPE IDENTIFIER
    (32) assign -> . FLOATTYPE IDENTIFIER
    (33) assign -> . CHARTYPE IDENTIFIER
    (34) assign -> . STRINGTYPE IDENTIFIER
    (35) assign -> . IDENTIFIER EQUAL expression
    (36) print -> . PRINT LPAREN expression RPAREN
    (37) print -> . PRINT LPAREN STRING RPAREN
    (38) input -> . IDENTIFIER EQUAL INPUT LPAREN RPAREN
    (39) return -> . RETURN expression
    (40) return -> . RETURN INT
    (41) return -> . RETURN IDENTIFIER
    (61) if_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE
    (62) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE LBRACE legal RBRACE
    (63) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_else_statement
    (64) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_statement
    (65) while_statement -> . WHILE LPAREN expression RPAREN LBRACE legal RBRACE
    (66) for_statement -> . FOR LPAREN assign SEMICOLON expression SEMICOLON assign RPAREN LBRACE legal RBRACE
    (71) function_statement -> . type_identifier LPAREN function_input RPAREN LBRACE legal RBRACE
    (72) function_statement -> . VOID IDENTIFIER LPAREN function_input RPAREN LBRACE legal RBRACE
    (24) comment -> . COMMENT
    (85) empty -> .
    (67) type_identifier -> . INTTYPE IDENTIFIER
    (68) type_identifier -> . CHARTYPE IDENTIFIER
    (69) type_identifier -> . FLOATTYPE IDENTIFIER
    (70) type_identifier -> . STRINGTYPE IDENTIFIER

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    IDENTIFIER      shift and go to state 20
    INTTYPE         shift and go to state 21
    FLOATTYPE       shift and go to state 22
    CHARTYPE        shift and go to state 23
    STRINGTYPE      shift and go to state 24
    PRINT           shift and go to state 25
    RETURN          shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    VOID            shift and go to state 31
    COMMENT         shift and go to state 32
    $end            reduce using rule 85 (empty -> .)

    if_else_statement              shift and go to state 8
    ka                             shift and go to state 52
    expression                     shift and go to state 2
    assign                         shift and go to state 3
    print                          shift and go to state 4
    input                          shift and go to state 5
    return                         shift and go to state 6
    if_statement                   shift and go to state 7
    while_statement                shift and go to state 9
    for_statement                  shift and go to state 10
    function_statement             shift and go to state 11
    comment                        shift and go to state 12
    empty                          shift and go to state 13
    type_identifier                shift and go to state 30

state 9

    (8) ka -> while_statement . ka
    (1) ka -> . expression SEMICOLON ka
    (2) ka -> . assign SEMICOLON ka
    (3) ka -> . print SEMICOLON ka
    (4) ka -> . input SEMICOLON ka
    (5) ka -> . return SEMICOLON legal
    (6) ka -> . if_statement ka
    (7) ka -> . if_else_statement ka
    (8) ka -> . while_statement ka
    (9) ka -> . for_statement ka
    (10) ka -> . function_statement ka
    (11) ka -> . comment ka
    (12) ka -> . empty
    (42) expression -> . expression ADD expression
    (43) expression -> . expression SUBTRACT expression
    (44) expression -> . expression MULTIPLY expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . expression EXP expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . expression EQUALCOMP expression
    (49) expression -> . expression GREATER_THAN_EQUAL expression
    (50) expression -> . expression LESS_THAN_EQUAL expression
    (51) expression -> . expression GREATER_THAN expression
    (52) expression -> . expression LESS_THAN expression
    (53) expression -> . expression NOTEQUAL expression
    (54) expression -> . NOT expression
    (55) expression -> . expression AND expression
    (56) expression -> . expression OR expression
    (57) expression -> . INT
    (58) expression -> . FLOAT
    (59) expression -> . CONTINUE
    (60) expression -> . BREAK
    (76) expression -> . IDENTIFIER LPAREN function_call_input RPAREN
    (84) expression -> . IDENTIFIER
    (25) assign -> . INTTYPE IDENTIFIER EQUAL INT
    (26) assign -> . INTTYPE IDENTIFIER EQUAL expression
    (27) assign -> . FLOATTYPE IDENTIFIER EQUAL expression
    (28) assign -> . CHARTYPE IDENTIFIER EQUAL CHAR
    (29) assign -> . FLOATTYPE IDENTIFIER EQUAL FLOAT
    (30) assign -> . STRINGTYPE IDENTIFIER EQUAL STRING
    (31) assign -> . INTTYPE IDENTIFIER
    (32) assign -> . FLOATTYPE IDENTIFIER
    (33) assign -> . CHARTYPE IDENTIFIER
    (34) assign -> . STRINGTYPE IDENTIFIER
    (35) assign -> . IDENTIFIER EQUAL expression
    (36) print -> . PRINT LPAREN expression RPAREN
    (37) print -> . PRINT LPAREN STRING RPAREN
    (38) input -> . IDENTIFIER EQUAL INPUT LPAREN RPAREN
    (39) return -> . RETURN expression
    (40) return -> . RETURN INT
    (41) return -> . RETURN IDENTIFIER
    (61) if_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE
    (62) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE LBRACE legal RBRACE
    (63) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_else_statement
    (64) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_statement
    (65) while_statement -> . WHILE LPAREN expression RPAREN LBRACE legal RBRACE
    (66) for_statement -> . FOR LPAREN assign SEMICOLON expression SEMICOLON assign RPAREN LBRACE legal RBRACE
    (71) function_statement -> . type_identifier LPAREN function_input RPAREN LBRACE legal RBRACE
    (72) function_statement -> . VOID IDENTIFIER LPAREN function_input RPAREN LBRACE legal RBRACE
    (24) comment -> . COMMENT
    (85) empty -> .
    (67) type_identifier -> . INTTYPE IDENTIFIER
    (68) type_identifier -> . CHARTYPE IDENTIFIER
    (69) type_identifier -> . FLOATTYPE IDENTIFIER
    (70) type_identifier -> . STRINGTYPE IDENTIFIER

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    IDENTIFIER      shift and go to state 20
    INTTYPE         shift and go to state 21
    FLOATTYPE       shift and go to state 22
    CHARTYPE        shift and go to state 23
    STRINGTYPE      shift and go to state 24
    PRINT           shift and go to state 25
    RETURN          shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    VOID            shift and go to state 31
    COMMENT         shift and go to state 32
    $end            reduce using rule 85 (empty -> .)

    while_statement                shift and go to state 9
    ka                             shift and go to state 53
    expression                     shift and go to state 2
    assign                         shift and go to state 3
    print                          shift and go to state 4
    input                          shift and go to state 5
    return                         shift and go to state 6
    if_statement                   shift and go to state 7
    if_else_statement              shift and go to state 8
    for_statement                  shift and go to state 10
    function_statement             shift and go to state 11
    comment                        shift and go to state 12
    empty                          shift and go to state 13
    type_identifier                shift and go to state 30

state 10

    (9) ka -> for_statement . ka
    (1) ka -> . expression SEMICOLON ka
    (2) ka -> . assign SEMICOLON ka
    (3) ka -> . print SEMICOLON ka
    (4) ka -> . input SEMICOLON ka
    (5) ka -> . return SEMICOLON legal
    (6) ka -> . if_statement ka
    (7) ka -> . if_else_statement ka
    (8) ka -> . while_statement ka
    (9) ka -> . for_statement ka
    (10) ka -> . function_statement ka
    (11) ka -> . comment ka
    (12) ka -> . empty
    (42) expression -> . expression ADD expression
    (43) expression -> . expression SUBTRACT expression
    (44) expression -> . expression MULTIPLY expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . expression EXP expression
    (47) expression -> . LPAREN expression RPAREN
    (48) expression -> . expression EQUALCOMP expression
    (49) expression -> . expression GREATER_THAN_EQUAL expression
    (50) expression -> . expression LESS_THAN_EQUAL expression
    (51) expression -> . expression GREATER_THAN expression
    (52) expression -> . expression LESS_THAN expression
    (53) expression -> . expression NOTEQUAL expression
    (54) expression -> . NOT expression
    (55) expression -> . expression AND expression
    (56) expression -> . expression OR expression
    (57) expression -> . INT
    (58) expression -> . FLOAT
    (59) expression -> . CONTINUE
    (60) expression -> . BREAK
    (76) expression -> . IDENTIFIER LPAREN function_call_input RPAREN
    (84) expression -> . IDENTIFIER
    (25) assign -> . INTTYPE IDENTIFIER EQUAL INT
    (26) assign -> . INTTYPE IDENTIFIER EQUAL expression
    (27) assign -> . FLOATTYPE IDENTIFIER EQUAL expression
    (28) assign -> . CHARTYPE IDENTIFIER EQUAL CHAR
    (29) assign -> . FLOATTYPE IDENTIFIER EQUAL FLOAT
    (30) assign -> . STRINGTYPE IDENTIFIER EQUAL STRING
    (31) assign -> . INTTYPE IDENTIFIER
    (32) assign -> . FLOATTYPE IDENTIFIER
    (33) assign -> . CHARTYPE IDENTIFIER
    (34) assign -> . STRINGTYPE IDENTIFIER
    (35) assign -> . IDENTIFIER EQUAL expression
    (36) print -> . PRINT LPAREN expression RPAREN
    (37) print -> . PRINT LPAREN STRING RPAREN
    (38) input -> . IDENTIFIER EQUAL INPUT LPAREN RPAREN
    (39) return -> . RETURN expression
    (40) return -> . RETURN INT
    (41) return -> . RETURN IDENTIFIER
    (61) if_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE
    (62) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE LBRACE legal RBRACE
    (63) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_else_statement
    (64) if_else_statement -> . IF LPAREN expression RPAREN LBRACE legal RBRACE ELSE if_statement
    (65) while_statement -> . WHILE LPAREN expression RPAREN LBRACE legal RBRACE
    (66) for_statement -> . FOR LPAREN assign SEMICOLON expression SEMICOLON assign RPAREN LBRACE legal RBRACE
    (71) function_statement -> . type_identifier LPAREN function_input RPAREN LBRACE legal RBRACE
    (72) function_statement -> . VOID IDENTIFIER LPAREN function_input RPAREN LBRACE legal RBRACE
    (24) comment -> . COMMENT
    (85) empty -> .
    (67) type_identifier -> . INTTYPE IDENTIFIER
    (68) type_identifier -> . CHARTYPE IDENTIFIER
    (69) type_identifier -> . FLOATTYPE IDENTIFIER
    (70) type_identifier -> . STRINGTYPE IDENTIFIER

    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CONTINUE        shift and go to state 18
    BREAK           shift and go to state 19
    IDENTIFIER      shift and go to state 20
    INTTYPE         shift and go to state 21
    FLOATTYPE       shift and go to state 22
    CHARTYPE        shift and go to state 23
    STRINGTYPE      shift and go to state 24
    PRINT           shift and go to state 25
    RETURN          shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29
    VOID            shift and go to state 31
    COMMENT         shift and go to state 32
    $end            reduce using rule 85 (empty -> .)

    for_statement                  shift and go to state 10
    ka                             shift and go to state 54
    expression                     shift and go to state 2
    assign                         shift and go to state 3
    print                          shift and go to state 4
    input                          shift and go to state 5
    return                         shift and go to state 6
    if_statement                   shift and go to state 7
    if_else_statement              shift and go to state 8
    while_statement                shift and go to state 9
    function_statement             shift and go to state 11
    comment                        shift and go to state 12
    empty                          shift and go to state 13
    type_identifier                shift and go to state 30

state 11
